docs: update technical documentation and architecture diagrams to reflect v3.0 Adaptive features and self-healing workflow